--- a/index.html
+++ b/index.html
@@ -16,7 +16,18 @@
 </head>
 
 <body>
-    <p>Hello World</p>
+    <header>
+        <div class="left">L</div>
+        <div class="right">R</div>
+    </header>
+    <main>
+        <h1>Google</h1>
+    </main>
+    <footer>
+        <div class="left">L</div>
+        <div class="right">R</div>
+    </footer>
+
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
