Add content from the normal google page

--- a/index.html
+++ b/index.html
@@ -18,8 +18,16 @@
 <body>
     <div class="grid">
         <header>
-            <div class="left">L</div>
-            <div class="right">R</div>
+            <div class="left" id="top-left">
+                <a href="">About</a>
+                <a href="">Store</a>
+            </div>
+            <div class="right" id="top-right">
+                <a href="">Gmail</a>
+                <a href="">Images</a>
+                <!-- svg dropdown -->
+                <!-- Profile picture image -->
+            </div>
         </header>
         <main>
             <div class="flex-column">
@@ -35,8 +43,20 @@
                 </form>
         </main>
         <footer>
-            <div class="left">L</div>
-            <div class="right">R</div>
+            <div class="left" id="bot-left">
+                <a href="">Advertising</a>
+                <a href="">Business</a>
+                <a href="">How Search Works</a>
+            </div>
+            <div class="center" id="bot-center">
+                <!-- leaf graphic -->
+                <a href="">Carbon neutral since 2007</a>
+            </div>
+            <div class="right" id="bot-right">
+                <a href="">Privacy</a>
+                <a href="">Terms</a>
+                <a href="">Settings</a>
+            </div>
         </footer>
     </div>
 
