Separate footer links more

--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
                 </form>
         </main>
         <footer>
-            <div class="left" id="bot-left">
+            <div class="left footer" id="bot-left">
                 <a href="">Advertising</a>
                 <a href="">Business</a>
                 <a href="">How Search Works</a>
             </div>
-            <div class="right" id="bot-right">
+            <div class="right footer" id="bot-right">
                 <a href="">Privacy</a>
                 <a href="">Terms</a>
                 <a href="">Settings</a>
