Stylize user input

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
                 <h1>Google</h1>
                 <form action="#">
                     <div class="flex-column">
-                        <input type="text" name="user-input" id="user-input">
+                        <div class="text-platform">
+                            <input type="text" name="user-input" id="user-input" title="Search">
+                        </div>
                         <div class="flex-row">
                             <input type="submit" name="search" id="search" value="Google Search">
                             <input type="submit" name="lucky" id="lucky" value="I'm Feeling Lucky">
