--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </header>
         <main>
             <div class="flex-column">
-                <h1>Google</h1>
+                <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" id="google-logo">
                 <form action="#">
                     <div class="flex-column">
                         <div class="text-platform">
@@ -71,9 +71,9 @@
 <!-- To Do -->
 <!-- 
 
-* 
+* blue sign in button
 
-* 
+* small icons all around
 
 * 
 
