Add links to all anchors

--- a/index.html
+++ b/index.html
@@ -20,19 +20,23 @@
     <div class="grid">
         <header>
             <div class="left" id="top-left">
-                <a href="">About</a>
-                <a href="">Store</a>
+                <a
+                    href="https://about.google/?fg=1&utm_source=google-US&utm_medium=referral&utm_campaign=hp-header">About</a>
+                <a
+                    href="https://store.google.com/US?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-US">Store</a>
             </div>
             <div class="right" id="top-right">
-                <a href="">Gmail</a>
-                <a href="">Images</a>
+                <a href="https://mail.google.com/mail/?authuser=0&ogbl">Gmail</a>
+                <a href="https://www.google.com/imghp?hl=en&authuser=0&ogbl">Images</a>
                 <!-- svg dropdown -->
                 <!-- Profile picture image -->
             </div>
         </header>
         <main>
             <div class="flex-column">
-                <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" id="google-logo">
+                <a href="https://www.google.com/">
+                    <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
+                        id="google-logo"></a>
                 <form action="#">
                     <div class="flex-column">
                         <div class="text-platform">
@@ -47,13 +51,15 @@
         </main>
         <footer>
             <div class="left footer" id="bot-left">
-                <a href="">Advertising</a>
-                <a href="">Business</a>
-                <a href="">How Search Works</a>
+                <a
+                    href="https://www.google.com/intl/en_us/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Advertising</a>
+                <a
+                    href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1">Business</a>
+                <a href="https://google.com/search/howsearchworks/?fg=1">How Search Works</a>
             </div>
             <div class="right footer" id="bot-right">
-                <a href="">Privacy</a>
-                <a href="">Terms</a>
+                <a href="https://policies.google.com/privacy?hl=en&fg=1">Privacy</a>
+                <a href="https://policies.google.com/terms?hl=en&fg=1">Terms</a>
                 <a href="">Settings</a>
             </div>
         </footer>
