--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
+    <!-- Font Awesome Icons -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
+        integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
+
     <!-- Custom CSS -->
     <link href="styles\style.css" rel="stylesheet">
 </head>
@@ -39,7 +43,7 @@
                         id="google-logo"></a>
                 <form action="#">
                     <div class="flex-column">
-                        <div class="text-platform">
+                        <div class="text-platform"><i class="fas fa-search" id="search-icon"></i>
                             <input type="text" name="user-input" id="user-input" title="Search">
                         </div>
                         <div class="flex-row">
