Add a mic option to the search bar

--- a/index.html
+++ b/index.html
@@ -43,8 +43,12 @@
                         id="google-logo"></a>
                 <form action="#">
                     <div class="flex-column">
-                        <div class="text-platform"><i class="fas fa-search" id="search-icon"></i>
+                        <div class="text-platform">
+                            <i class="fas fa-search" id="search-icon"></i>
                             <input type="text" name="user-input" id="user-input" title="Search">
+                            <a href="" id="voice-search">
+                                <i class="fas fa-microphone" id="mic-icon" title="Search by voice"></i>
+                            </a>
                         </div>
                         <div class="flex-row">
                             <input type="submit" name="search" id="search" value="Google Search">
@@ -85,7 +89,7 @@
 
 * small icons all around
 
-* 
+* responsive height
 
 * 
 
