--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                         </div>
                     </div>
                 </form>
+            </div>
         </main>
         <footer>
             <div class="left footer" id="bot-left">
