--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
                 <a href="https://mail.google.com/mail/?authuser=0&ogbl">Gmail</a>
                 <a href="https://www.google.com/imghp?hl=en&authuser=0&ogbl">Images</a>
                 <!-- svg dropdown -->
-                <!-- Profile picture image -->
+                <button type="button" class="btn btn-primary btn-custom"
+                    href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/%3Fgws_rd%3Dssl&ec=GAZAmgQ">Sign
+                    in</button>
             </div>
         </header>
         <main>
@@ -69,7 +71,7 @@
             <div class="right footer" id="bot-right">
                 <a href="https://policies.google.com/privacy?hl=en&fg=1">Privacy</a>
                 <a href="https://policies.google.com/terms?hl=en&fg=1">Terms</a>
-                <a href="">Settings</a>
+                <a href="#">Settings</a>
             </div>
         </footer>
     </div>
