--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
             <div class="right" id="top-right">
                 <a href="https://mail.google.com/mail/?authuser=0&ogbl">Gmail</a>
                 <a href="https://www.google.com/imghp?hl=en&authuser=0&ogbl">Images</a>
-                <!-- svg dropdown -->
+                <button type="button" class=" btn circle-dropdown" href="#dropdown-function">
+                    <img src="images\dots-menu.png" class="inoperable" width="16px">
+                </button>
                 <button type="button" class="btn btn-primary btn-custom"
                     href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/%3Fgws_rd%3Dssl&ec=GAZAmgQ">Sign
                     in</button>
@@ -74,6 +76,8 @@
                 <a href="#">Settings</a>
             </div>
         </footer>
+        <div class="hidden">Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a
+                href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
     </div>
 
 
