Add final todo item to the list

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="right" id="top-right">
                 <a href="https://mail.google.com/mail/?authuser=0&ogbl">Gmail</a>
                 <a href="https://www.google.com/imghp?hl=en&authuser=0&ogbl">Images</a>
-                <button type="button" class=" btn circle-dropdown" href="#dropdown-function">
+                <button type="button" class=" btn circle-dropdown" href="#dropdown-function" title="Google apps">
                     <img src="images\dots-menu.png" class="inoperable" width="16px">
                 </button>
                 <button type="button" class="btn btn-primary btn-custom"
@@ -92,11 +92,11 @@
 <!-- To Do -->
 <!-- 
 
-* blue sign in button
+* responsive design
 
-* small icons all around
+* 
 
-* responsive height
+* 
 
 * 
 
